--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,21 +83,7 @@ p {
     margin-left: 25px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    background-color: #0072bb;
-}
-
-.social-media-marketing {
+.content-section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -124,12 +110,14 @@ p {
 .benefits p {
     margin-bottom: 32px;
 }
+
 .benefits img {
     display: block;
     margin: 36px auto;
     max-width: 150px;
 }
 
+/* Footer Styles */
 .footer {
     padding: 30px;
     clear: both;
